Revert "Clean up return types and annotations on cat controller."
This reverts commit ab996c7c3d15f1d04f4f167c78945e6335864a19.
